k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
  namespace: demo
  labels:
    app: cloud-app
spec:
  selector:
    app: cloud-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
